Django templating changed to jinja2 for easier access to dictionary functionality while templating. Main Scrum report finished

--- a/trello_scrum/scrum/jinja2/scrum/index.html
+++ b/trello_scrum/scrum/jinja2/scrum/index.html
@@ -16,7 +16,7 @@
                 <tr>
                     <td>{{ employee.full_name }}</td>
                     {% for lst_name in lists_names %}
-                        <td>{{ employee.points.lst_name }}</td>
+                        <td>{{ employee.points[lst_name] }}</td>
                     {% endfor %}
                 </tr>
             {% endfor %}
