--- a/scrum/jinja2/scrum/index.html
+++ b/scrum/jinja2/scrum/index.html
@@ -16,7 +16,7 @@
                 <tr>
                     <td>{{ employee.full_name }}</td>
                     {% for lst_name in lists_names %}
-                        <td>{{ employee.points[lst_name] }}</td>
+                        <td>{{ '%0.2f'| format(employee.points[lst_name]|float) }}</td>
                     {% endfor %}
                 </tr>
             {% endfor %}
